--- a/sample.css
+++ b/sample.css
@@ -6,14 +6,13 @@
 	body{
 	 	width:60% ;
 		margin:auto;
-		background-color:green;
 	}
 	h1{
-		color:red ;
+		color:indianred ;
 	}
 	p{
 		text-align:justify ;
-		font:italic small-caps bold 20px monospace ;	
+		font:italic normal bold 20px monospace ;	
 	}
 	</style>
 </head>
