--- a/sample.css
+++ b/sample.css
@@ -1,15 +1,15 @@
 
 	
 		body{
-	 	width:60% ;
+	 	width:80% ;
 		margin:auto;
-		background-color:green;
+		
 	}
 	h1{
 		color:red ;
 	}
 	p{
 		text-align:justify ;
-		font:normal normal bold 20px monospace ;	
+		font:normal normal bold 20px arsenic ;	
 	}
 	
