--- a/sample.css
+++ b/sample.css
@@ -6,10 +6,10 @@
 		
 	}
 	h1{
-		color:red ;
+		color:#ff8000;
 	}
 	p{
 		text-align:justify ;
-		font:normal normal bold 20px hevletica ;	
+		font:normal normal lighter 20px hevletica ;	
 	}
 	
