--- a/sample.css
+++ b/sample.css
@@ -11,7 +11,7 @@
 	}
 	p{
 		text-align:justify ;
-		font:normal normal lighter 20px hevletica ;	
+		font:normal normal bold 20px hevletica ;	
 	}
 	img{
 		display:block;
